Ported the garbage collection arguments to Grails 2.3.2.